--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
 </head>
 
-<body class="body">
+<body class="body  ">
     <div class="wrapper">
         <header class="header">
             <div class="header__background"></div>
+            <img class="header__img" src="img/header_img.jfif" alt="">
                 <div class="container">
                     <div class="nav">
                         <ul class="nav__list">
@@ -24,7 +25,7 @@
                                     <img src="img/icon/logo.svg" alt="">
                                 </a>
                             </li>
-                            <li>
+                            <li class="nav__text-general">
                                 <a href="#">
                                     Главная
                                 </a>
@@ -45,7 +46,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <ul class="nav__list-contact">  
+                        <ul class="nav__list-contact">
                             <li class="nav__list-img">
                                 <img src="img/icon/email.svg" alt="">
                                 <div class="nav__list-circle"></div>
@@ -60,24 +61,140 @@
                                 <div class="nav__list-circle"></div>
                             </li>
                             <li>
-                                <a  href="#">
-                                    +7 (919) 714-25-00 
+                                <a href="#">
+                                    +7 (919) 714-25-00
                                 </a>
                             </li>
                             <div class="button">
-                                <a href="#">
+                                <a class="button__link" href="#">
                                     Заказать звонок
                                 </a>
                             </div>
                         </ul>
                     </div>
+                    <div class="header__hero">
+                        <h1 class="header__hero-title">
+                            Аренда квартир в Березниках
+                        </h1>
+                        <p class="header__hero-subtitle">
+                            На длительный срок или посуточно
+                        </p>
+                        <button class="button button--header ">
+                            Смотреть варианты
+                        </button>
+                    </div>
+                    <div class="header__cards">
+                        <div class="header__cards-bloc">
+                            <img class="header__cards-icon" src="img/icon/doc.svg" alt="">
+                            <p class="header__cards-text">
+                                Заключаем договоры, предоставляет отчётные документы
+                            </p>
+                        </div>
+                        <div class="header__cards-bloc">
+                            <img class="header__cards-icon" src="img/icon/money.svg" alt="">
+                            <p class="header__cards-text">
+                                Наличный и  безналичный расчёт
+                            </p>
+                        </div>
+                        <div class="header__cards-bloc">
+                            <img class="header__cards-icon" src="img/icon/time.svg" alt="">
+                            <p class="header__cards-text">
+                                Бронирование и заселение круглосуточно
+                            </p>
+                        </div>
+                        <div class="header__cards-bloc">
+                            <img class="header__cards-icon" src="img/icon/safety.svg" alt="">
+                            <p class="header__cards-text">
+                                Полная конфиденциальность
+                            </p>
+                        </div>
+                    </div>
                 </div>    
+            </div>
         </header>
         <main class="main">
-            
+            <section class="apartments">
+                <div class="container">
+                    <h2 class="apartments__general-title">
+                        Наши квартиры
+                    </h2>
+                    <div class="apartments__grid">
+                        <div class="apartments__bloc bloc1">
+                            <div class="apartments__info">
+                                <h3 class="apartments__title">
+                                    Однокомнатная квартира
+                                </h3>
+                                <span> Сутки:</span>
+                                <span> 1 500 ₽</span>
+                                <img src="img/icon/Location_red.svg" alt="">
+                                <p class="apartments__subtitle"> Березники, ул. Юбилейная 108</p>
+                            </div>
+                            <button class=" button button--apartments ">Подробнее</button> 
+                        </div>
+                        <div class="apartments__bloc bloc2">
+                            <div class="apartments__info">
+                                <h3 class="apartments__title">
+                                    Однокомнатная квартира
+                                </h3>
+                                <span> Сутки:</span>
+                                <span> 1 500 ₽</span>
+                                <img src="img/icon/Location_red.svg" alt="">
+                                <p class="apartments__subtitle"> Березники, ул. Юбилейная 108</p>
+                            </div> 
+                            <button class=" button button--apartments ">Подробнее</button>
+                        </div>
+                        <div class="apartments__bloc bloc3">
+                            <div class="apartments__info">
+                                <h3 class="apartments__title">
+                                    Однокомнатная квартира
+                                </h3>
+                                <span> Сутки:</span>
+                                <span> 1 500 ₽</span>
+                                <img src="img/icon/Location_red.svg" alt="">
+                                <p class="apartments__subtitle"> Березники, ул. Юбилейная 108</p>
+                            </div> 
+                            <button class=" button button--apartments ">Подробнее</button>
+                        </div>
+                        <div class="apartments__bloc bloc4">
+                            <div class="apartments__info">
+                                <h3 class="apartments__title">
+                                    Однокомнатная квартира
+                                </h3>
+                                <span> Сутки:</span>
+                                <span> 1 500 ₽</span>
+                                <img src="img/icon/Location_red.svg" alt="">
+                                <p class="apartments__subtitle"> Березники, ул. Юбилейная 108</p>
+                            </div> 
+                            <button class=" button button--apartments ">Подробнее</button>
+                        </div>
+                    </div>
+                </div>    
+            </section>
         </main>
-        <footer class="footer">
+        <footer class="footer">   
         </footer>
-    </div>    
+        <div class="modal">
+            <div class="modal__window">
+                <a class="modal__cancel" href="#">
+                    <img src="img/icon/cancel.svg" alt="">
+                </a>
+                <h2 class="modal__title ">
+                    Заказать звонок
+                </h2>
+                <p class="modal__text">
+                    Оставьте заявку и мы свяжемся с Вами в ближайшее время!
+                </p>
+                <form class="modal__form">
+                    <input class="field__input" type="text" placeholder="имя">
+                    <input class="field__input" type="tel" placeholder="телефон">
+                    <button class="button button--modal" type="submit">
+                        отправить 
+                    </button>
+                </form>
+            </div>    
+        </div>    
+    
+    </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
