--- a/index.html
+++ b/index.html
@@ -401,17 +401,121 @@
         </section>
     </main>
     <footer class="footer">
-        <!-- <div class="footer-background">
-            <img src="img/footer_img.jfif" alt="">
-        </div>
+        <img  class="footer__background" src="img/footer_img.jfif" alt="">
         <div class="container">
-            <div class="footer-wrapper">
-                <div class="footer-window">
-
+            <div class="footer__wrapper">
+                <div class="footer__window">
+                    <h2 class="footer__window-title ">
+                        Напишите нам
+                    </h2>
+                    <form class="footer__window-form">
+                        <input class="footer__window-input" type="text" placeholder="имя">
+                        <input class="footer__window-input" type="email" placeholder="Email">
+                        <input class="footer__window-input footer__window-input--big " type="text" placeholder="Ваше сообщение">
+                        <button class="button footer__window-button " type="submit">
+                            отправить
+                        </button>
+                    </form>
                 </div>
-                
+                <div class="footer__info">
+                    <img src="img/icon/comma sm.svg" alt="">
+                    <div class="footer__info-text">
+                        Дорогой гость, если у тебя есть какие-то пожелания или притензии 
+                        по&nbsp;улучшению качества обслуживания или просто хочешь оставить свой
+                        комментарий, то заполни форму. Мы обязательно ответим тебе,
+                        или&nbsp;опубликуем его на нашем сайте.
+                    </div>
+                    <div class="footer__info-name">
+                        <h5> 
+                            Татьяна Вячеславовна
+                        </h5>
+                        <span>
+                            Директор гостиницы
+                        </span>
+                    </div>
+                </div>
             </div>
-        </div> -->
+            <div class="nav nav--footer ">
+                <ul class="nav__list">
+                    <li class="nav__list-logo">
+                        <a  href="#">
+                            Логотип
+                        </a>
+                    </li>
+                    <li class="nav__text-general nav__text-general--footer ">
+                        <a href="#">
+                            Главная
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Квартиры
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Контакты
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            О нас
+                        </a>
+                    </li>
+                </ul>
+                <ul class="nav__list-contact">
+                    <li class="nav__list-img">
+                        <img src="img/icon/circle/mail.svg" alt="">
+
+                    </li>
+                    <li>
+                        <a href="#">
+                            mail@yandex.ru
+                        </a>
+                    </li>
+                    <li class="nav__list-img">
+                        <img class="nav__list-img" src="img/icon/circle/phone.svg" alt="">
+                    </li>
+                    <li>
+                        <a href="#">
+                            +7 (919) 714-25-00
+                        </a>
+                    </li>
+                </ul>
+                <ul class="nav__list-cosial">
+                    <li>
+                        <a href="">
+                            <img src="img/icon/circle/telegramm.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="img/icon/circle/facebook.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="img/icon/circle/vk.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="img/icon/circle/instagramm.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="line-footer"></div>
+            <div class="footer__Copyright">
+                <p>
+                    © Copyright 2021, «Домашняя гостиница»
+                </p>
+                <span>
+                    Пользовательское соглашение
+                </span>
+            </div>
+
+        </div>
     </footer>
     <div class="modal">
         <div class="modal__window">
