--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="header__background"></div>
             <img class="header__img" src="img/header_img.jfif" alt="">
             <div class="container">
-                <div class="nav">
+                <div class="nav nav--header">
                     <ul class="nav__list">
                         <li>
                             <a href="#">
@@ -401,7 +401,9 @@
         </section>
     </main>
     <footer class="footer">
+        <div class="footer__filter"></div>
         <img  class="footer__background" src="img/footer_img.jfif" alt="">
+        
         <div class="container">
             <div class="footer__wrapper">
                 <div class="footer__window">
@@ -418,6 +420,7 @@
                     </form>
                 </div>
                 <div class="footer__info">
+                    
                     <img src="img/icon/comma sm.svg" alt="">
                     <div class="footer__info-text">
                         Дорогой гость, если у тебя есть какие-то пожелания или притензии 
