--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     <link href="css/style.min.css" rel="stylesheet">
     
     <title>диплом</title>
-
 </head>
 
 <body class="body  ">
     <div class="wrapper">
         <header class="header">
             <div class="header__background"></div>
-            <img class="header__img" src="img/header_img.jfif" alt="">
             <div class="container">
                 <div class="nav nav--header">
                     <ul class="nav__list">
@@ -48,21 +46,29 @@
                             </a>
                         </li>
                     </ul>
+                    <ul  class="nav__list-mobail">
+                        <li class="nav__list-item">
+                            <a class="nav_list-burger" href="#"></a>
+                        </li>
+                        <li class="nav__list-item">
+                            <img src="img/icon/logo mobail.svg" alt="">
+                        </li>
+                    </ul>
                     <ul class="nav__list-contact">
-                        <li class="nav__list-img">
+                        <li class="nav__list-img maill">
                             <img src="img/icon/email blue.svg" alt="">
                             <div class="nav__list-circle"></div>
                         </li>
-                        <li>
+                        <li class="nav__list-mail">
                             <a href="#">
                                 mail@yandex.ru
                             </a>
                         </li>
                         <li class="nav__list-img">
-                            <img class="nav__list-img" src="img/icon/Phone blue.svg" alt="">
+                            <img src="img/icon/Phone blue.svg" alt="">
                             <div class="nav__list-circle"></div>
                         </li>
-                        <li>
+                        <li class="nav__list-tell">
                             <a href="#">
                                 +7 (919) 714-25-00
                             </a>
@@ -74,6 +80,8 @@
                         </div>
                     </ul>
                 </div>
+            </div> <!--container -->
+            <div class="header__hero-wrapper"> 
                 <div class="header__hero">
                     <h1 class="header__hero-title">
                         Аренда квартир в Березниках
@@ -85,36 +93,44 @@
                         Смотреть варианты
                     </button>
                 </div>
+                <div class="header__hero-img">
+                    <div class="header__hero-img-fil"></div>
+                    <img class="header__img" src="img/header_img.jfif" alt="">
+                </div>
+            </div>    
+            <div class="container">
                 <div class="header__cards">
-                    <div class="header__cards-bloc">
+                    <div class="header__cards-bloc header__cards-bloc--1">
                         <img class="header__cards-icon" src="img/icon/doc.svg" alt="">
                         <p class="header__cards-text">
                             Заключаем договоры, предоставляет отчётные документы
                         </p>
                     </div>
-                    <div class="header__cards-bloc">
+                    <div class="header__cards-bloc header__cards-bloc--2">
                         <img class="header__cards-icon" src="img/icon/money.svg" alt="">
                         <p class="header__cards-text">
                             Наличный и безналичный расчёт
                         </p>
                     </div>
-                    <div class="header__cards-bloc">
+                    <div class="header__cards-bloc header__cards-bloc--3">
                         <img class="header__cards-icon" src="img/icon/time.svg" alt="">
                         <p class="header__cards-text">
                             Бронирование и заселение круглосуточно
                         </p>
                     </div>
-                    <div class="header__cards-bloc">
+                    <div class="header__cards-bloc header__cards-bloc--4">
                         <img class="header__cards-icon" src="img/icon/safety.svg" alt="">
                         <p class="header__cards-text">
                             Полная конфиденциальность
                         </p>
+                        <p class="header__cards-text header__cards-text--4 ">
+                            Полная конфиден<br>циальность
+                        </p>
                     </div>
                 </div>
             </div>
-    </div>
-    </header>
-    <main class="main">
+        </header>
+    <!-- <main class="main">
         <section class="apartments">
             <div class="container">
                 <h2 class="apartments__general-title">
@@ -278,15 +294,16 @@
             <div class="reviews__background">
                 <img class="reviews__background-img" src="img/icon/comma big.svg" alt="">
             </div>
-            <div class=" reviews__prev ">
-                <img src="img/icon/left.svg" alt="">
-            </div>
-            <div class=" reviews__next ">
-                <img src="img/icon/right.svg" alt="">
-            </div>
+
             <div class="container container--reviews ">
                 <h3 class="reviews__title">Отзывы клиентов </h3>
                 <div class="reviews__swiper  swiper">
+                    <div class=" reviews__prev ">
+                        <img src="img/icon/left.svg" alt="">
+                    </div>
+                    <div class=" reviews__next ">
+                        <img src="img/icon/right.svg" alt="">
+                    </div> 
                     <div class=" reviews__swiper-wrapper swiper-wrapper">
                         <div class=" reviews__slide  swiper-slide">
                             <div class="reviews__slide-title">
@@ -467,19 +484,14 @@
                     </li>
                 </ul>
                 <ul class="nav__list-contact">
-                    <li class="nav__list-img">
+                    <li class="nav__list-contact-mail"   >
                         <img src="img/icon/circle/mail.svg" alt="">
-
-                    </li>
-                    <li>
                         <a href="#">
                             mail@yandex.ru
                         </a>
                     </li>
-                    <li class="nav__list-img">
-                        <img class="nav__list-img" src="img/icon/circle/phone.svg" alt="">
-                    </li>
-                    <li>
+                    <li class="nav__list-contact-tell">
+                        <img  src="img/icon/circle/phone.svg" alt="">
                         <a href="#">
                             +7 (919) 714-25-00
                         </a>
@@ -519,7 +531,7 @@
             </div>
 
         </div>
-    </footer>
+    </footer>  -->
     <div class="modal">
         <div class="modal__window">
             <a class="modal__cancel" href="#">
