--- a/index.html
+++ b/index.html
@@ -9,44 +9,44 @@
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/swiper-bundle.min.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
-    
+
     <title>диплом</title>
 </head>
 
-<body class="body  ">
+<body class="body">
     <div class="wrapper">
         <header class="header">
             <div class="header__background"></div>
             <div class="container">
                 <div class="nav nav--header">
                     <ul class="nav__list">
-                        <li>
+                        <li class="nav__list-general-item">
                             <a href="#">
                                 <img src="img/icon/logo.svg" alt="">
                             </a>
                         </li>
-                        <li class="nav__text-general">
+                        <li class=" nav__list-general-item nav__text-general">
                             <a href="#">
                                 Главная
                             </a>
                         </li>
-                        <li>
+                        <li class="nav__list-general-item">
                             <a href="#">
                                 Квартиры
                             </a>
                         </li>
-                        <li>
+                        <li class="nav__list-general-item">
                             <a href="#">
                                 Контакты
                             </a>
                         </li>
-                        <li>
+                        <li class="nav__list-general-item">
                             <a href="#">
                                 О нас
                             </a>
                         </li>
                     </ul>
-                    <ul  class="nav__list-mobail">
+                    <ul class="nav__list-mobail">
                         <li class="nav__list-item">
                             <a class="nav_list-burger" href="#"></a>
                         </li>
@@ -81,7 +81,33 @@
                     </ul>
                 </div>
             </div> <!--container -->
-            <div class="header__hero-wrapper"> 
+            <div class="nav__mobail-wrapper">
+                <div class="nav__mobail-container">
+                    <ul class="nav__list-mobail">
+                        <li class=" nav__list-item-mobai">
+                            <a href="#">
+                                Главная
+                            </a>
+                        </li>
+                        <li class="nav__list-item-mobai">
+                            <a href="#">
+                                Квартиры
+                            </a>
+                        </li>
+                        <li class="nav__list-item-mobai">
+                            <a href="#">
+                                Контакты
+                            </a>
+                        </li>
+                        <li class="nav__list-item-mobai">
+                            <a href="#">
+                                О нас
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="header__hero-wrapper">
                 <div class="header__hero">
                     <h1 class="header__hero-title">
                         Аренда квартир в Березниках
@@ -97,7 +123,7 @@
                     <div class="header__hero-img-fil"></div>
                     <img class="header__img" src="img/header_img.jfif" alt="">
                 </div>
-            </div>    
+            </div>
             <div class="container">
                 <div class="header__cards">
                     <div class="header__cards-bloc header__cards-bloc--1">
@@ -130,7 +156,7 @@
                 </div>
             </div>
         </header>
-    <!-- <main class="main">
+        <!-- <main class="main">
         <section class="apartments">
             <div class="container">
                 <h2 class="apartments__general-title">
@@ -532,31 +558,31 @@
 
         </div>
     </footer>  -->
-    <div class="modal">
-        <div class="modal__window">
-            <a class="modal__cancel" href="#">
-                <img src="img/icon/cancel.svg" alt="">
-            </a>
-            <h2 class="modal__title ">
-                Заказать звонок
-            </h2>
-            <p class="modal__text">
-                Оставьте заявку и мы свяжемся с Вами в ближайшее время!
-            </p>
-            <form class="modal__form">
-                <input class="field__input" type="text" placeholder="имя">
-                <input class="field__input" type="tel" placeholder="телефон">
-                <button class="button button--modal" type="submit">
-                    отправить
-                </button>
-            </form>
+        <div class="modal">
+            <div class="modal__window">
+                <a class="modal__cancel" href="#">
+                    <img src="img/icon/cancel.svg" alt="">
+                </a>
+                <h2 class="modal__title ">
+                    Заказать звонок
+                </h2>
+                <p class="modal__text">
+                    Оставьте заявку и мы свяжемся с Вами в ближайшее время!
+                </p>
+                <form class="modal__form">
+                    <input class="field__input" type="text" placeholder="имя">
+                    <input class="field__input" type="tel" placeholder="телефон">
+                    <button class="button button--modal" type="submit">
+                        отправить
+                    </button>
+                </form>
+            </div>
         </div>
-    </div>
 
     </div>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
-    
+
 </body>
 
 </html>
