--- a/index.html
+++ b/index.html
@@ -73,11 +73,15 @@
                                 +7 (919) 714-25-00
                             </a>
                         </li>
-                        <button class="button">
-                            <a class="button__link" href="#">
-                                Заказать звонок
-                            </a>
-                        </button>
+                        <li>
+                            <div class="button">
+                                <a class="button__link" href="#">
+                                    Заказать звонок
+                                </a>
+    
+                            </div>
+                        </li>
+
                     </ul>
                 </div>
             </div> 
@@ -115,9 +119,9 @@
                     <p class="header__hero-subtitle">
                         На длительный срок или посуточно
                     </p>
-                    <button  class="button button--header ">
+                    <div  class="button button--header ">
                         <a href="#apartments">Смотреть варианты</a>
-                    </button>
+                    </div>
                 </div>
                 <div class="header__hero-img">
                     <div class="header__hero-img-fil"></div>
@@ -473,7 +477,7 @@
         <div class="footer__filter"></div>
         <img  class="footer__background" src="img/footer_img.jfif" alt="">
         
-        <div class="container">
+        <div class="container">  
             <div class="footer__wrapper">
                 <div class="footer__window">
                     <h2 class="footer__window-title ">
