--- a/index.html
+++ b/index.html
@@ -348,10 +348,10 @@
                 <h3 class="reviews__title">Отзывы клиентов </h3>
                 <div class="reviews__wrapper">
                     <div class=" reviews__prev ">
-                        <img src="img/icon/left.svg" alt="">
+                        <img src="img/icon/leftt.svg" alt="">
                     </div>
                     <div class=" reviews__next ">
-                        <img src="img/icon/right.svg" alt="">
+                        <img src="img/icon/rightt.svg" alt="">
                     </div> 
                 </div>
                 <div class="reviews__swiper  swiper">
