--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                     </ul>
                     <ul class="nav__list-contact">
                         <li class="nav__list-img maill">
-                            <img src="img/icon/email-blue.svg" alt="">
-                            <div class="nav__list-circle"></div>
+                            <img src="img/icon/Mail.svg" alt="">
                         </li>
                         <li class="nav__list-mail">
                             <a href="#">
@@ -65,8 +64,7 @@
                             </a>
                         </li>
                         <li class="nav__list-img">
-                            <img src="img/icon/Phone-blue.svg" alt="">
-                            <div class="nav__list-circle"></div>
+                            <img src="img/icon/Phone.svg" alt="">
                         </li>
                         <li class="nav__list-tell">
                             <a href="#">
@@ -477,7 +475,7 @@
         <div class="footer__filter"></div>
         <img  class="footer__background" src="img/footer_img.jfif" alt="">
         
-        <div class="container">  
+        <div class="container ">  
             <div class="footer__wrapper">
                 <div class="footer__window">
                     <h2 class="footer__window-title ">
@@ -538,7 +536,7 @@
                         </a>
                     </li>
                 </ul>
-                <ul class="nav__list-mobail">
+                <ul class="nav__list-mobail nav__list-mobail--footer">
                     <li class="nav__list-item nav__list-item--footer">
                         <img src="img/icon/logo-mobail.svg" alt="">
                     </li>
