--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </li>
                     </ul>
                     <ul class="nav__list-mobail">
-                        <li class="nav__list-item">
+                        <li class=" nav__list-item--burger">
                             <a class="nav_list-burger" href="#"></a>
                         </li>
                         <li class="nav__list-item">
@@ -86,6 +86,9 @@
             <div class="nav__mobail-wrapper"> 
                 <div class="nav__mobail-container">
                     <ul class="nav__list-mobail">
+                        <li class="nav__list-item nav__list-item--burger">
+                            <a class="nav_list-burger" href="#"></a>
+                        </li>
                         <li class=" nav__list-item-mobai">
                             <a href="/">
                                 Главная
